--- a/src/test/resources/org/prebid/server/it/test-application.properties
+++ b/src/test/resources/org/prebid/server/it/test-application.properties
@@ -21,6 +21,8 @@ adapters.adman.enabled=true
 adapters.adman.endpoint=http://localhost:8090/adman-exchange
 adapters.admixer.enabled=true
 adapters.admixer.endpoint=http://localhost:8090/admixer-exchange
+adapters.admaru.enabled=true
+adapters.admaru.endpoint=http://localhost:8090/admaru-exchange
 adapters.adnuntius.enabled=true
 adapters.adnuntius.endpoint=http://localhost:8090/adnuntius-exchange
 adapters.adocean.enabled=true
