--- a/src/main/resources/bidder-config/admaru.yaml
+++ b/src/main/resources/bidder-config/admaru.yaml
@@ -1,5 +1,6 @@
 adapters:
   admaru:
+    enabled: true
     endpoint: https://p1.admaru.net/AdCall
     meta-info:
       maintainer-email: m4292007@gmail.com
